Reset default delivery semantics to at-least-once

--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -13,7 +13,7 @@ util:
 cdc:
   sink:
     config:
-      pk.mode: "record_key"
+      pk.mode: "none"
       pk.fields: ""
   postgres: []
   #  postgres:
