--- a/charts/dataplane/templates/strimzi/connector.yaml
+++ b/charts/dataplane/templates/strimzi/connector.yaml
@@ -149,8 +149,9 @@ spec:
     tasks.max: "1"
     topics.regex: "cdc.(.*)"
     auto.create: true
-    pk.mode: "record_key"
-    pk.fields: ""
+    {{- with .Values.cdc.sink.config }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
     key.converter: io.confluent.connect.avro.AvroConverter
     key.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
     value.converter: io.confluent.connect.avro.AvroConverter
