--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -7,10 +7,14 @@ util:
   image:
     repository: nephelaiio/dataplane-util
     pullPolicy: IfNotPresent
-    tag: dataplane-0.1.17
+    tag: dataplane-0.1.18
   resources: {}
 
 cdc:
+  sink:
+    config:
+      pk.mode: "none"
+      pk.fields: ""
   postgres: []
   #  postgres:
   #    - hostname: "network.hostname"
@@ -45,7 +49,7 @@ strimzi:
   connect:
     image:
       repository: nephelaiio/dataplane-connect
-      tag: dataplane-0.1.17
+      tag: dataplane-0.1.18
     replicas: 1
     config:
       group.id: connect-cluster
@@ -100,7 +104,7 @@ metabase:
     image:
       repository: nephelaiio/dataplane-util
       pullPolicy: IfNotPresent
-      tag: dataplane-0.1.17
+      tag: dataplane-0.1.18
     securityContext: {}
 
   image:
