--- a/charts/dataplane/templates/strimzi/connector.yaml
+++ b/charts/dataplane/templates/strimzi/connector.yaml
@@ -4,7 +4,7 @@
 
 {{- range $db := .Values.cdc.postgres }}
 {{-   $dbId := required "database id is required" $db.id }}
-{{-   $dbSlotName := lower $dbId | replace "." "-" }}
+{{-   $dbSlotName := lower $dbId | replace "." "-" | replace "-" "_" }}
 {{-   $exclude := list }}
 {{-   $include := list }}
 
