--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dataplane = 'dataplane.cli:cli'
 [tool.poetry.dependencies]
 python = "^3.10"
 molecule = "^5.1.0"
+pyyaml = "^6.0.1"
 
 [tool.poetry .group.dev.dependencies]
 docker = "^6.0.0"
