Fix poetry install errors (#49)
* Fix poetry install errors

* Bump release version

* Update dependencies

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -55,10 +55,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: install package prerequisites
+        run: sudo apt-get install -y postgresql-common libpq-dev
+
       - name: install poetry
         run: pip3 install poetry
 
-      - name: install pips
+      - name: install dependencies
         run: poetry install
 
       - name: install make
