--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,10 +6,10 @@ dependency:
     requirements-file: requirements.yml
 
 platforms:
-  - name: localhost
+  - name: Localhost
 
 driver:
-  name: delegated
+  name: default
 
 provisioner:
   name: ansible
