--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,15 +1,11 @@
 ---
-- name: converge
-
+- name: Converge
   hosts: localhost
-
   gather_facts: false
-
   roles:
     - nephelaiio.plugins
-
   tasks:
-    - name: wait for strimzi crd deployment
+    - name: Wait for strimzi crd deployment
       kubernetes.core.k8s_info:
         api_version: v1
         kind: CustomResourceDefinition
@@ -22,7 +18,7 @@
         wait_sleep: 10
         wait_timeout: 300
 
-    - name: wait for zalando crd deployment
+    - name: Wait for zalando crd deployment
       kubernetes.core.k8s_info:
         api_version: v1
         kind: CustomResourceDefinition
@@ -35,7 +31,7 @@
         wait_sleep: 10
         wait_timeout: 300
 
-    - name: create metabase namespace
+    - name: Create metabase namespace
       kubernetes.core.k8s:
         state: present
         api_version: v1
@@ -43,7 +39,7 @@
         name: "{{ dataplane_namespace }}"
         kubeconfig: "{{ k8s_kubeconfig | default(omit) }}"
 
-    - name: deploy source pagila db
+    - name: Deploy source pagila db
       kubernetes.core.k8s:
         state: present
         kubeconfig: "{{ k8s_kubeconfig | default(omit) }}"
@@ -80,7 +76,7 @@
               parameters:
                 wal_level: logical
 
-    - name: wait for database cluster startup
+    - name: Wait for database cluster startup
       ansible.builtin.fail:
         msg: "zalando clusters failed to come up on time"
       vars:
@@ -99,7 +95,7 @@
         - (cluster_status | length) != (cluster_query | length)
         - cluster_failed | length > 0
 
-    - name: query pagila service data
+    - name: Query pagila service data
       ansible.builtin.set_fact:
         pagila_host: "{{ _db_svc_data.status.loadBalancer.ingress[0].ip }}"
       vars:
@@ -111,7 +107,7 @@
           kind='Service',
           kubeconfig=k8s_kubeconfig) }}"
 
-    - name: query pagila owner data
+    - name: Query pagila owner data
       ansible.builtin.set_fact:
         pagila_owner_user: "{{ _db_secret_data.data.username | b64decode }}"
         pagila_owner_pass: "{{ _db_secret_data.data.password | b64decode }}"
@@ -124,7 +120,7 @@
           kind='Secret',
           kubeconfig=k8s_kubeconfig) }}"
 
-    - name: query pagila connection data
+    - name: Query pagila connection data
       ansible.builtin.set_fact:
         pagila_user: "{{ _db_secret_data.data.username | b64decode }}"
         pagila_pass: "{{ _db_secret_data.data.password | b64decode }}"
@@ -137,12 +133,12 @@
           kind='Secret',
           kubeconfig=k8s_kubeconfig) }}"
 
-    - name: wait for database port open
+    - name: Wait for database port open
       ansible.builtin.wait_for:
         host: "{{ pagila_host }}"
         port: 5432
 
-    - name: create pagila database
+    - name: Create pagila database
       community.postgresql.postgresql_db:
         name: "{{ dataplane_pagila_db }}"
         state: present
@@ -150,32 +146,32 @@
         login_password: "{{ pagila_pass }}"
         login_host: "{{ pagila_host }}"
 
-    - name: create data tempdir
+    - name: Create data tempdir
       ansible.builtin.tempfile:
         state: directory
         prefix: data
       register: datadir
       changed_when: false
 
-    - name: load pagila data
+    - name: Load pagila data
       block:
-        - name: fetch pagila schema file
+        - name: Fetch pagila schema file
           ansible.builtin.get_url:
             url: https://github.com/devrimgunduz/pagila/raw/master/pagila-schema.sql
             dest: "{{ datadir.path }}/schema.sql"
           changed_when: false
 
-        - name: fetch pagila data file
+        - name: Fetch pagila data file
           ansible.builtin.get_url:
             url: https://github.com/devrimgunduz/pagila/raw/master/pagila-data.sql
             dest: "{{ datadir.path }}/data.sql"
           changed_when: false
 
-        - name: concatenate pagila sql files
+        - name: Concatenate pagila sql files
           ansible.builtin.shell: >
             cat {{ datadir.path }}/schema.sql {{ datadir.path }}/data.sql > {{ datadir.path }}/pagila.sql
 
-        - name: load pagila db data
+        - name: Load pagila db data
           community.postgresql.postgresql_db:
             name: "{{ dataplane_pagila_db }}"
             state: restore
@@ -186,13 +182,13 @@
           changed_when: false
 
       always:
-        - name: destroy data tempdir
+        - name: Destroy data tempdir
           ansible.builtin.file:
             state: absent
             path: "{{ datadir.path }}"
           changed_when: false
 
-    - name: query pagila publications
+    - name: Query pagila publications
       community.postgresql.postgresql_query:
         db: "{{ dataplane_pagila_db }}"
         query: "SELECT * FROM pg_publication where pubname = 'dbz_publication'"
@@ -201,7 +197,7 @@
         login_host: "{{ pagila_host }}"
       register: pagila_publication_query
 
-    - name: create pagila publication
+    - name: Create pagila publication
       community.postgresql.postgresql_query:
         db: "{{ dataplane_pagila_db }}"
         query: "CREATE PUBLICATION dbz_publication FOR ALL TABLES"
@@ -210,7 +206,7 @@
         login_host: "{{ pagila_host }}"
       when: pagila_publication_query.query_all_results | flatten | length == 0
 
-    - name: deploy dataplane helm chart
+    - name: Deploy dataplane Helm chart
       kubernetes.core.helm:
         state: present
         name: "{{ dataplane_chart }}"
@@ -224,7 +220,7 @@
         binary_path: "{{ k8s_helm_bin }}"
         values: "{{ dataplane_chart_values }}"
 
-    - name: wait for database cluster startup
+    - name: Wait for database cluster startup
       ansible.builtin.fail:
         msg: "zalando clusters failed to come up on time"
       vars:
